      - FSE mode: enabled parsing of unknown version fields.
    - 'why':
      - Prefer any number of (Pre-)Depends over 1 Recommends.
      - Prefer 2 Recommends over 1 Suggests.
      - Apply penalties for non-first relations. (Closes: #772558)
    - 'snapshot save':
      - Accept only snapshot names made of whitelist characters (lowercase
        latin letters, digits, dash, underscore).
  * lib:
    - config:
      - New option 'cupt::resolver::score::version-factor::common'.
      - New option 'cupt::resolver::score::version-factor::negative'.
      - New option
        'cupt::resolver::score::version-factor::priority-downgrade'.
        (Closes: #764755)
      - New option 'cupt::resolver::max-leaf-count'.
      - Option 'cupt::resolver::max-solution-count': increased default value
        from 8192 to 32000.
      - Option 'cupt::resolver::score::quality-adjustment': changed default
        value from 40 to 0.
      - Option 'cupt::resolver::score::removal-of-autoinstalled': changed
        default value from 1200 to 1500.
      - Option 'cupt::resolver::score::upgrade': changed default value
        from 100 to 20.
      - 'setScalar': when doing APT-to-Cupt option translation, also-set
        original-case APT option instead of normalised-case APT option.
      - 'setScalar': accept any option from 'dpkg' family without filtering.
    - system/state:
      - [API break] 'getInstalledInfo': returns raw pointer.
      - [ABI break] Removed handling of longly obsolete Status fields. Patch by
        Guillem Jover. (Closes: #764468)
      - InstalledRecord::Status::strings: added strings for trigger-related
        states. Fixes crash on trying to stringify such states.
    - system/worker:
      - [API break] 'setAutomaticallyInstalledFlag': removed as obsolete.
      - Debdelta helper: use debdelta sources file path as relative to 'dir'
        option, not as absolute path.
      - 'changeSystem': preinstall hooks: pass original version strings of